WIP: InstruPy instrument example

--- a/src/instrument-example.ipynb
+++ b/src/instrument-example.ipynb
@@ -62,6 +62,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reset -f"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,7 +88,7 @@
     "\n",
     "from instrupy.basic_sensor_model import BasicSensorModel\n",
     "\n",
-    "from tatc.schemas import Instrument, Satellite as TATC_Satellite, TwoLineElements, Point\n",
+    "from tatc.schemas import Instrument as TATC_Instrument, Satellite as TATC_Satellite, TwoLineElements, Point\n",
     "from tatc.analysis import collect_orbit_track, OrbitCoordinate, OrbitOutput\n",
     "from tatc.analysis import (\n",
     "    collect_multi_observations,\n",
@@ -87,6 +96,9 @@
     "    reduce_observations,\n",
     ")\n",
     "\n",
+    "from instrupy.basic_sensor_model import BasicSensorModel as InstruPy_BasicSensorModel\n",
+    "\n",
+    "from eose.instruments import CircularGeometry, BasicSensor\n",
     "from eose.datametric import DataMetricRequest, BasicSensorDataMetricResponse\n",
     "from eose.propagation import PropagationRecord, PropagationRequest, PropagationResponse\n",
     "from eose.orbits import GeneralPerturbationsOrbitState\n",
@@ -104,6 +116,8 @@
     "from joblib import Parallel, delayed\n",
     "from scipy.stats import hmean\n",
     "import pandas as pd\n",
+    "\n",
+    "from astropy.time import Time as AstroPy_Time\n",
     "\n"
    ]
   },
@@ -111,6 +125,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the orbit and the instrument\n",
+    "iss_omm_str = '[{\"OBJECT_NAME\":\"ISS (ZARYA)\",\"OBJECT_ID\":\"1998-067A\",\"EPOCH\":\"2024-06-07T09:53:34.728000\",\"MEAN_MOTION\":15.50975122,\"ECCENTRICITY\":0.0005669,\"INCLINATION\":51.6419,\"RA_OF_ASC_NODE\":3.7199,\"ARG_OF_PERICENTER\":284.672,\"MEAN_ANOMALY\":139.0837,\"EPHEMERIS_TYPE\":0,\"CLASSIFICATION_TYPE\":\"U\",\"NORAD_CAT_ID\":25544,\"ELEMENT_SET_NO\":999,\"REV_AT_EPOCH\":45703,\"BSTAR\":0.00033759,\"MEAN_MOTION_DOT\":0.00019541,\"MEAN_MOTION_DDOT\":0}]'\n",
+    "iss_omm = json.loads(iss_omm_str)[0]\n",
+    "\n",
+    "basic_sensor = BasicSensor(   mass= 100.5,\n",
+    "                        volume= 0.75,\n",
+    "                        power= 150.0,\n",
+    "                        field_of_view = CircularGeometry(diameter=60.0),\n",
+    "                        data_rate= 10.5,\n",
+    "                        bits_per_pixel= 16\n",
+    "                    )\n",
+    "\n",
+    "mission_start = datetime(2024, 1, 1, tzinfo=timezone.utc)\n",
+    "mission_duration = timedelta(days=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Run propagation with TAT-C to get satellite states\n",
@@ -121,7 +159,7 @@
     "                name=request.orbit.object_name,\n",
     "                orbit=TwoLineElements(tle=request.orbit.to_tle()),\n",
     "            ),\n",
-    "            Instrument(name=\"Instrument\"),\n",
+    "            TATC_Instrument(name=\"Instrument\"),\n",
     "            pd.date_range(\n",
     "                request.start, request.start + request.duration, freq=request.time_step\n",
     "            ),\n",
@@ -143,35 +181,37 @@
     "        ),\n",
     "    )\n",
     "\n",
-    "iss_omm_str = '[{\"OBJECT_NAME\":\"ISS (ZARYA)\",\"OBJECT_ID\":\"1998-067A\",\"EPOCH\":\"2024-06-07T09:53:34.728000\",\"MEAN_MOTION\":15.50975122,\"ECCENTRICITY\":0.0005669,\"INCLINATION\":51.6419,\"RA_OF_ASC_NODE\":3.7199,\"ARG_OF_PERICENTER\":284.672,\"MEAN_ANOMALY\":139.0837,\"EPHEMERIS_TYPE\":0,\"CLASSIFICATION_TYPE\":\"U\",\"NORAD_CAT_ID\":25544,\"ELEMENT_SET_NO\":999,\"REV_AT_EPOCH\":45703,\"BSTAR\":0.00033759,\"MEAN_MOTION_DOT\":0.00019541,\"MEAN_MOTION_DDOT\":0}]'\n",
-    "iss_omm = json.loads(iss_omm_str)[0]\n",
+    "\n",
     "\n",
     "request = PropagationRequest(\n",
     "    orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
-    "    start=datetime(2024, 1, 1, tzinfo=timezone.utc),\n",
-    "    duration=timedelta(hours=1),\n",
-    "    time_step=timedelta(minutes=1),\n",
+    "    start=mission_start,\n",
+    "    duration=mission_duration,\n",
+    "    time_step=timedelta(minutes=0.25),\n",
     "    frame=CartesianReferenceFrame.ICRF,\n",
     ")\n",
     "\n",
     "display(request.model_dump_json())\n",
     "\n",
-    "response = propagate_tatc(request)\n",
+    "prop_response = propagate_tatc(request)\n",
     "\n",
-    "display(response.model_dump_json())\n",
+    "display(prop_response.model_dump_json())\n",
     "\n",
-    "data = response.as_dataframe()\n",
+    "prop_data = prop_response.as_dataframe()\n",
     "\n",
-    "display(data)\n"
+    "display(prop_data)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# Run coverage analysis with TAT-C to get access-times at Target ground points\n",
+    "# Run coverage analysis with TAT-C to get access-times at Target ground points. It is assumed that the sensor shall be of Circular FOV geometry.\n",
+    "\n",
     "\n",
     "def coverage_tatc(request: CoverageRequest) -> CoverageResponse:\n",
     "    unique_ids = len(set(target.id for target in request.targets)) == len(\n",
@@ -191,7 +231,7 @@
     "            name=satellite.orbit.object_name,\n",
     "            orbit=TwoLineElements(tle=satellite.orbit.to_tle()),\n",
     "            instruments=[\n",
-    "                Instrument(name=\"Default\", field_of_regard=satellite.field_of_view)\n",
+    "                TATC_Instrument(name=\"Default\", field_of_regard=satellite.field_of_view)\n",
     "            ],\n",
     "        )\n",
     "        for satellite in request.satellites\n",
@@ -257,25 +297,25 @@
     "request = CoverageRequest(\n",
     "    satellites=[\n",
     "        Satellite(\n",
-    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm), field_of_view=100\n",
+    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm), field_of_view=basic_sensor.field_of_view.diameter\n",
     "        )\n",
     "    ],\n",
     "    targets=UniformAngularGrid(\n",
     "        delta_latitude=20, delta_longitude=20, region=mapping(box(-180, -50, 180, 50))\n",
     "    ).as_targets(),\n",
-    "    start=datetime(2024, 1, 1, tzinfo=timezone.utc),\n",
-    "    duration=timedelta(days=1),\n",
+    "    start=mission_start,\n",
+    "    duration=mission_duration,\n",
     ")\n",
     "\n",
     "display(request.model_dump_json())\n",
     "\n",
-    "response = coverage_tatc(request)\n",
+    "coverage_response = coverage_tatc(request)\n",
     "\n",
-    "display(response.model_dump_json())\n",
+    "display(coverage_response.model_dump_json())\n",
     "\n",
-    "data = response.as_dataframe()\n",
+    "coverage_data = coverage_response.as_dataframe()\n",
     "\n",
-    "display(data)"
+    "display(coverage_data)"
    ]
   },
   {
@@ -284,24 +324,112 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run InstruPy Basic Sensor datametrics calculator to get the incidence angle\n",
+    "# define the InstruPy basic sensor model\n",
+    "instrupy_basic_sensor = InstruPy_BasicSensorModel.from_dict({\"orientation\": {\"referenceFrame\": \"SC_BODY_FIXED\", \"convention\": \"REF_FRAME_ALIGNED\"},\n",
+    "                                         \"fieldOfViewGeometry\": {\"shape\": \"CIRCULAR\", \"diameter\": basic_sensor.field_of_view.diameter}\n",
+    "                                                            })\n",
+    "\n",
+    "def propagation_records_within_time_range(propagate_response, start_time, duration):\n",
+    "\n",
+    "    end_time = start_time + duration\n",
+    "    #print(\"Start time and end date are: \", start_time, end_time)\n",
+    "    # iterate through all the records, and store the records corresponding to the given time range\n",
+    "    filtered_propagate_records = []\n",
+    "    for record in propagate_response.records:\n",
+    "                \n",
+    "        # Check if the time falls within the range\n",
+    "        if start_time <= record.time <= end_time:\n",
+    "            filtered_propagate_records.append(record)\n",
+    "            #print(record.time)\n",
+    "\n",
+    "    return filtered_propagate_records\n",
+    "\n",
+    "# iterate through the coverage records\n",
+    "for record in coverage_response.records:\n",
+    "    # each record consists of coverage samples (start, duration) for a target point\n",
+    "    #print(record)\n",
+    "    #print(\"\\n\")\n",
+    "    # iterate through each coverage sample within a coverage record\n",
+    "    target = record.target\n",
+    "    print(\"target = \", target)\n",
+    "    for sample in record.samples:\n",
+    "        print(sample.start, sample.duration, \"\\n\")\n",
+    "\n",
+    "        # from the propagation response, find satellite states within the coverage sample period\n",
+    "        pr = propagation_records_within_time_range(prop_response, sample.start, sample.duration)\n",
+    "\n",
+    "        print(\"Propagate state: \", pr)\n",
+    "\n",
+    "        if pr is not []: # if propagation states are available within the time-period\n",
+    "            # iterate through the propagation states\n",
+    "            for _pr in pr: \n",
+    "                # get the time in Julian Date UT1\n",
+    "                time_utc = AstroPy_Time(_pr.time, scale='utc') # Convert to astropy Time object\n",
+    "                time_ut1 = time_utc.ut1  # Convert to UT1 time scale\n",
+    "                jd_ut1 = time_ut1.jd  # Get the Julian Date\n",
+    "        \n",
+    "                # calculate the corresponding instantaneous data metrics\n",
+    "                SpacecraftOrbitState = {'time [JDUT1]':jd_ut1, 'x [km]': _pr.position[0]*1e-3, 'y [km]': _pr.position[1]*1e-3, 'z [km]': _pr.position[2]*1e-3, \n",
+    "                                        'vx [km/s]': _pr.velocity[0]*1e-3, 'vy [km/s]': _pr.velocity[1]*1e-3, 'vz [km/s]': _pr.velocity[2]*1e-3}\n",
+    "                TargetCoords = {'lat [deg]': target.position[1], 'lon [deg]': target.position[0]}\n",
+    "                obsv_metrics = instrupy_basic_sensor.calc_data_metrics(SpacecraftOrbitState, TargetCoords)\n",
+    "                print(obsv_metrics)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run InstruPy Basic Sensor datametrics calculator to get the data-metricss\n",
     "\n",
     "\n",
     "def datametrics_instrupy(request: DataMetricRequest) -> BasicSensorDataMetricResponse:\n",
     "    \n",
     "    \n",
-    "    # Filter propagation record for each access and compute metrics throughout the access at each propagation point \n",
+    "    # Filter propagation record for each access and compute metrics throughout the access period at each propagation time-instant\n",
+    "\n",
+    "    # iterate through each access\n",
+    "    for index, access in enumerate(coverage_data):\n",
+    "        print(access.records)\n",
+    "    \n",
     "\n",
     "\n",
     "    return"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dsh",
+   "display_name": "Python [conda env:eosim] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-eosim-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -313,9 +441,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
