--- a/src/tatc-coverage-example.ipynb
+++ b/src/tatc-coverage-example.ipynb
@@ -50,7 +50,7 @@
     "        request.targets\n",
     "    )\n",
     "    point_ids = [\n",
-    "        target.id if has_unique_ids and isinstance(target.id, int) else i \n",
+    "        target.id if has_unique_ids and isinstance(target.id, int) else i\n",
     "        for i, target in enumerate(request.targets)\n",
     "    ]\n",
     "    satellites = [\n",
@@ -70,7 +70,11 @@
     "                    id=point_id,\n",
     "                    longitude=request.targets[i].position[0],\n",
     "                    latitude=request.targets[i].position[1],\n",
-    "                    altitude=request.targets[i].position[2] if len(request.targets[i].position) > 2 else 0,\n",
+    "                    altitude=(\n",
+    "                        request.targets[i].position[2]\n",
+    "                        if len(request.targets[i].position) > 2\n",
+    "                        else 0\n",
+    "                    ),\n",
     "                ),\n",
     "                satellites,\n",
     "                request.start,\n",
@@ -84,7 +88,9 @@
     "            lambda r: ObservationRecord(\n",
     "                target=request.targets[point_ids.index(r[\"point_id\"])],\n",
     "                samples=observations[observations.point_id == r[\"point_id\"]].apply(\n",
-    "                    lambda s: ObservationSample(start=s.start, duration=s.end - s.start, source=s.satellite),\n",
+    "                    lambda s: ObservationSample(\n",
+    "                        start=s.start, duration=s.end - s.start, source=s.satellite\n",
+    "                    ),\n",
     "                    axis=1,\n",
     "                ),\n",
     "            ),\n",
@@ -103,9 +109,11 @@
     "\n",
     "\n",
     "def coverage_tatc(request: CoverageRequest) -> CoverageResponse:\n",
-    "    has_unique_ids = len(set(record.target.id for record in request.observations)) == len(request.observations)\n",
+    "    has_unique_ids = len(\n",
+    "        set(record.target.id for record in request.observations)\n",
+    "    ) == len(request.observations)\n",
     "    point_ids = [\n",
-    "        record.target.id if has_unique_ids and isinstance(record.target.id, int) else i \n",
+    "        record.target.id if has_unique_ids and isinstance(record.target.id, int) else i\n",
     "        for i, record in enumerate(request.observations)\n",
     "    ]\n",
     "    aggregated_obs = aggregate_observations(\n",
@@ -118,7 +126,7 @@
     "                    \"instrument\": sample.source,\n",
     "                    \"start\": sample.start,\n",
     "                    \"end\": sample.start + sample.duration,\n",
-    "                    \"epoch\": sample.start + sample.duration/2,\n",
+    "                    \"epoch\": sample.start + sample.duration / 2,\n",
     "                }\n",
     "                for i, record in enumerate(request.observations)\n",
     "                for sample in record.samples\n",
@@ -127,13 +135,24 @@
     "    )\n",
     "    reduced_obs = reduce_observations(aggregated_obs)\n",
     "    return CoverageResponse(\n",
-    "        **request.model_dump(exclude=[\"observations\",\"harmonic_mean_revisit\",\"coverage_fraction\"]),\n",
+    "        **request.model_dump(\n",
+    "            exclude=[\"observations\", \"harmonic_mean_revisit\", \"coverage_fraction\"]\n",
+    "        ),\n",
     "        observations=list(\n",
     "            reduced_obs.apply(\n",
     "                lambda r: CoverageRecord(\n",
-    "                    **request.observations[point_ids.index(r[\"point_id\"])].model_dump(exclude=[\"samples\",\"mean_revisit\",\"number_samples\"]),\n",
-    "                    samples=aggregated_obs[aggregated_obs.point_id == r[\"point_id\"]].apply(\n",
-    "                        lambda s: CoverageSample(start=s.start, duration=s.end - s.start, source=s.satellite, revisit=None if pd.isna(s.revisit) else s.revisit),\n",
+    "                    **request.observations[point_ids.index(r[\"point_id\"])].model_dump(\n",
+    "                        exclude=[\"samples\", \"mean_revisit\", \"number_samples\"]\n",
+    "                    ),\n",
+    "                    samples=aggregated_obs[\n",
+    "                        aggregated_obs.point_id == r[\"point_id\"]\n",
+    "                    ].apply(\n",
+    "                        lambda s: CoverageSample(\n",
+    "                            start=s.start,\n",
+    "                            duration=s.end - s.start,\n",
+    "                            source=s.satellite,\n",
+    "                            revisit=None if pd.isna(s.revisit) else s.revisit,\n",
+    "                        ),\n",
     "                        axis=1,\n",
     "                    ),\n",
     "                    mean_revisit=(\n",
@@ -143,9 +162,10 @@
     "                    ),\n",
     "                    number_samples=r[\"samples\"],\n",
     "                ),\n",
-    "                axis=1\n",
+    "                axis=1,\n",
     "            )\n",
-    "         ) + [\n",
+    "        )\n",
+    "        + [\n",
     "            CoverageRecord(target=request.observations[i].target)\n",
     "            for i, point_id in enumerate(point_ids)\n",
     "            if not any(reduced_obs[\"point_id\"] == point_id)\n",
