--- a/src/tatc-propagation-example.ipynb
+++ b/src/tatc-propagation-example.ipynb
@@ -354,19 +354,22 @@
     "from eose.pointing import PointingRecord, PointingRequest, PointingResponse\n",
     "from eose.utils import FixedOrientation\n",
     "\n",
+    "\n",
     "def pointing_tatc(request: PointingRequest) -> PointingResponse:\n",
     "    if request.mode != FixedOrientation.NADIR_GEOCENTRIC:\n",
-    "        raise NotImplementedError(\"TAT-C only implements geocentric nadir-pointing modes.\")\n",
+    "        raise NotImplementedError(\n",
+    "            \"TAT-C only implements geocentric nadir-pointing modes.\"\n",
+    "        )\n",
     "    return PointingResponse(\n",
     "        **request.model_dump(exclude=\"time_series\"),\n",
     "        time_series=[\n",
     "            PointingRecord(\n",
     "                **record.model_dump(exclude=[\"body_orientation\", \"view_orientation\"]),\n",
     "                body_orientation=FixedOrientation.NADIR_GEOCENTRIC,\n",
-    "                view_orientation=[0, 0, 0, 1]\n",
+    "                view_orientation=[0, 0, 0, 1],\n",
     "            )\n",
     "            for record in request.time_series\n",
-    "        ]\n",
+    "        ],\n",
     "    )"
    ]
   },
@@ -614,8 +617,7 @@
    ],
    "source": [
     "request2 = PointingRequest(\n",
-    "    **response.model_dump(),\n",
-    "    mode=FixedOrientation.NADIR_GEOCENTRIC\n",
+    "    **response.model_dump(), mode=FixedOrientation.NADIR_GEOCENTRIC\n",
     ")\n",
     "\n",
     "display(request2.model_dump_json())\n",
