--- a/src/tatc-coverage-example.ipynb
+++ b/src/tatc-coverage-example.ipynb
@@ -62,11 +62,7 @@
     "                    id=i,\n",
     "                    longitude=target.position[0],\n",
     "                    latitude=target.position[1],\n",
-    "                    altitude=(\n",
-    "                        target.position[2]\n",
-    "                        if len(target.position) > 2\n",
-    "                        else 0\n",
-    "                    ),\n",
+    "                    altitude=(target.position[2] if len(target.position) > 2 else 0),\n",
     "                ),\n",
     "                satellites,\n",
     "                request.start,\n",
@@ -78,17 +74,18 @@
     "    return ObservationResponse(\n",
     "        **request.model_dump(exclude=\"target_records\"),\n",
     "        target_records=[\n",
-    "            ObservationRecord(target_id=target.id)\n",
-    "            if not any(observations[\"point_id\"] == i)\n",
-    "            else\n",
-    "            ObservationRecord(\n",
-    "                target_id=target.id,\n",
-    "                samples=observations[observations.point_id == i].apply(\n",
-    "                    lambda s: ObservationSample(\n",
-    "                        start=s.start, duration=s.end - s.start, source=s.satellite\n",
+    "            (\n",
+    "                ObservationRecord(target_id=target.id)\n",
+    "                if not any(observations[\"point_id\"] == i)\n",
+    "                else ObservationRecord(\n",
+    "                    target_id=target.id,\n",
+    "                    samples=observations[observations.point_id == i].apply(\n",
+    "                        lambda s: ObservationSample(\n",
+    "                            start=s.start, duration=s.end - s.start, source=s.satellite\n",
+    "                        ),\n",
+    "                        axis=1,\n",
     "                    ),\n",
-    "                    axis=1,\n",
-    "                ),\n",
+    "                )\n",
     "            )\n",
     "            for i, target in enumerate(request.targets)\n",
     "        ],\n",
@@ -305,7 +302,9 @@
     "request = ObservationRequest(\n",
     "    satellites=[\n",
     "        Satellite(\n",
-    "            id=\"ISS\", orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm), field_of_view=100\n",
+    "            id=\"ISS\",\n",
+    "            orbit=GeneralPerturbationsOrbitState.from_omm(iss_omm),\n",
+    "            field_of_view=100,\n",
     "        )\n",
     "    ],\n",
     "    targets=UniformAngularGrid(\n",
@@ -360,11 +359,10 @@
     "            reduced_obs.apply(\n",
     "                lambda r: CoverageRecord(\n",
     "                    **next(\n",
-    "                        record for record in request.target_records \n",
+    "                        record\n",
+    "                        for record in request.target_records\n",
     "                        if request.targets[r[\"point_id\"]].id == record.target_id\n",
-    "                    ).model_dump(\n",
-    "                        exclude=[\"samples\", \"mean_revisit\", \"number_samples\"]\n",
-    "                    ),\n",
+    "                    ).model_dump(exclude=[\"samples\", \"mean_revisit\", \"number_samples\"]),\n",
     "                    samples=aggregated_obs[\n",
     "                        aggregated_obs.point_id == r[\"point_id\"]\n",
     "                    ].apply(\n",
