--- a/src/tatc-propagation-example.ipynb
+++ b/src/tatc-propagation-example.ipynb
@@ -11,10 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from joblib import Parallel, delayed\n",
+    "\n",
     "from tatc.schemas import Instrument, Satellite as TATC_Satellite, TwoLineElements\n",
     "from tatc.analysis import collect_orbit_track, OrbitCoordinate, OrbitOutput\n",
     "\n",
@@ -33,29 +35,33 @@
     "\n",
     "\n",
     "def propagate_tatc(request: PropagationRequest) -> PropagationResponse:\n",
+    "    orbit_tracks = Parallel(-1)(\n",
+    "        delayed(collect_orbit_track)(\n",
+    "            TATC_Satellite(\n",
+    "                name=satellite.id,\n",
+    "                orbit=TwoLineElements(tle=satellite.orbit.to_tle()),\n",
+    "            ),\n",
+    "            Instrument(name=\"Instrument\"),\n",
+    "            pd.date_range(\n",
+    "                request.start,\n",
+    "                request.start + request.duration,\n",
+    "                freq=request.time_step,\n",
+    "            ),\n",
+    "            coordinates=(\n",
+    "                OrbitCoordinate.ECI\n",
+    "                if request.frame == CartesianReferenceFrame.ICRF\n",
+    "                else OrbitCoordinate.ECEF\n",
+    "            ),\n",
+    "            orbit_output=OrbitOutput.POSITION_VELOCITY,\n",
+    "        )\n",
+    "        for satellite in request.satellites\n",
+    "    )\n",
     "    return PropagationResponse(\n",
     "        **request.model_dump(exclude=\"satellite_records\"),\n",
     "        satellite_records=[\n",
     "            PropagationRecord(\n",
     "                satellite_id=satellite.id,\n",
-    "                samples=collect_orbit_track(\n",
-    "                    TATC_Satellite(\n",
-    "                        name=satellite.id,\n",
-    "                        orbit=TwoLineElements(tle=satellite.orbit.to_tle()),\n",
-    "                    ),\n",
-    "                    Instrument(name=\"Instrument\"),\n",
-    "                    pd.date_range(\n",
-    "                        request.start,\n",
-    "                        request.start + request.duration,\n",
-    "                        freq=request.time_step,\n",
-    "                    ),\n",
-    "                    coordinates=(\n",
-    "                        OrbitCoordinate.ECI\n",
-    "                        if request.frame == CartesianReferenceFrame.ICRF\n",
-    "                        else OrbitCoordinate.ECEF\n",
-    "                    ),\n",
-    "                    orbit_output=OrbitOutput.POSITION_VELOCITY,\n",
-    "                ).apply(\n",
+    "                samples=orbit_tracks[i].apply(\n",
     "                    lambda r: PropagationSample(\n",
     "                        time=r.time,\n",
     "                        frame=request.frame,\n",
@@ -65,7 +71,7 @@
     "                    axis=1,\n",
     "                ),\n",
     "            )\n",
-    "            for satellite in request.satellites\n",
+    "            for i, satellite in enumerate(request.satellites)\n",
     "        ],\n",
     "    )"
    ]
@@ -81,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -362,12 +368,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example to Add Pointing Metadata"
+    "Append pointing analysis to propagation results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
