--- a/src/tatc-coverage-example.ipynb
+++ b/src/tatc-coverage-example.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import timedelta\n",
     "from joblib import Parallel, delayed\n",
     "from scipy.stats import hmean\n",
     "import geopandas as gpd\n",
@@ -55,31 +56,29 @@
     "        )\n",
     "        for satellite in request.satellites\n",
     "    ]\n",
-    "    observations = pd.concat(\n",
-    "        Parallel(-1)(\n",
-    "            delayed(collect_multi_observations)(\n",
-    "                Point(\n",
-    "                    id=i,\n",
-    "                    longitude=target.position[0],\n",
-    "                    latitude=target.position[1],\n",
-    "                    altitude=(target.position[2] if len(target.position) > 2 else 0),\n",
-    "                ),\n",
-    "                satellites,\n",
-    "                request.start,\n",
-    "                request.start + request.duration,\n",
-    "            )\n",
-    "            for i, target in enumerate(request.targets)\n",
+    "    observations = Parallel(-1)(\n",
+    "        delayed(collect_multi_observations)(\n",
+    "            Point(\n",
+    "                id=i,\n",
+    "                longitude=target.position[0],\n",
+    "                latitude=target.position[1],\n",
+    "                altitude=(target.position[2] if len(target.position) > 2 else 0),\n",
+    "            ),\n",
+    "            satellites,\n",
+    "            request.start,\n",
+    "            request.start + request.duration,\n",
     "        )\n",
+    "        for i, target in enumerate(request.targets)\n",
     "    )\n",
     "    return ObservationResponse(\n",
     "        **request.model_dump(exclude=\"target_records\"),\n",
     "        target_records=[\n",
     "            (\n",
     "                ObservationRecord(target_id=target.id)\n",
-    "                if not any(observations[\"point_id\"] == i)\n",
+    "                if observations[i].empty\n",
     "                else ObservationRecord(\n",
     "                    target_id=target.id,\n",
-    "                    samples=observations[observations.point_id == i].apply(\n",
+    "                    samples=observations[i].apply(\n",
     "                        lambda s: ObservationSample(\n",
     "                            start=s.start, duration=s.end - s.start, source=s.satellite\n",
     "                        ),\n",
@@ -89,6 +88,76 @@
     "            )\n",
     "            for i, target in enumerate(request.targets)\n",
     "        ],\n",
+    "    )\n",
+    "\n",
+    "def coverage_tatc(request: CoverageRequest) -> CoverageResponse:\n",
+    "    aggregated_obs = aggregate_observations(\n",
+    "        gpd.GeoDataFrame(\n",
+    "            [\n",
+    "                {\n",
+    "                    \"point_id\": request.targets.index(target),\n",
+    "                    \"geometry\": target.as_geometry(),\n",
+    "                    \"satellite\": sample.source,\n",
+    "                    \"instrument\": sample.source,\n",
+    "                    \"start\": sample.start,\n",
+    "                    \"end\": sample.start + sample.duration,\n",
+    "                    \"epoch\": sample.start + sample.duration / 2,\n",
+    "                }\n",
+    "                for record in request.target_records\n",
+    "                for target in [t for t in request.targets if t.id == record.target_id]\n",
+    "                for sample in record.samples\n",
+    "            ]\n",
+    "        )\n",
+    "    )\n",
+    "    reduced_obs = reduce_observations(aggregated_obs)\n",
+    "    return CoverageResponse(\n",
+    "        **request.model_dump(\n",
+    "            exclude=[\"target_records\", \"harmonic_mean_revisit\", \"coverage_fraction\"]\n",
+    "        ),\n",
+    "        target_records=list(\n",
+    "            reduced_obs.apply(\n",
+    "                lambda r: CoverageRecord(\n",
+    "                    **next(\n",
+    "                        record\n",
+    "                        for record in request.target_records\n",
+    "                        if request.targets[r[\"point_id\"]].id == record.target_id\n",
+    "                    ).model_dump(exclude=[\"samples\", \"mean_revisit\", \"number_samples\"]),\n",
+    "                    samples=aggregated_obs[\n",
+    "                        aggregated_obs.point_id == r[\"point_id\"]\n",
+    "                    ].apply(\n",
+    "                        lambda s: CoverageSample(\n",
+    "                            start=s.start,\n",
+    "                            duration=s.end - s.start,\n",
+    "                            source=s.satellite,\n",
+    "                            revisit=None if pd.isna(s.revisit) else s.revisit,\n",
+    "                        ),\n",
+    "                        axis=1,\n",
+    "                    ),\n",
+    "                    mean_revisit=(\n",
+    "                        None\n",
+    "                        if pd.isna(r[\"revisit\"])\n",
+    "                        else timedelta(seconds=r[\"revisit\"].total_seconds())\n",
+    "                    ),\n",
+    "                    number_samples=r[\"samples\"],\n",
+    "                ),\n",
+    "                axis=1,\n",
+    "            )\n",
+    "        )\n",
+    "        + [\n",
+    "            ObservationRecord(target_id=target.id)\n",
+    "            for i, target in enumerate(request.targets)\n",
+    "            if not any(reduced_obs[\"point_id\"] == i)\n",
+    "        ],\n",
+    "        harmonic_mean_revisit=(\n",
+    "            None\n",
+    "            if reduced_obs.dropna(subset=\"revisit\").empty\n",
+    "            else timedelta(\n",
+    "                seconds=hmean(\n",
+    "                    reduced_obs.dropna(subset=\"revisit\")[\"revisit\"].dt.total_seconds()\n",
+    "                )\n",
+    "            )\n",
+    "        ),\n",
+    "        coverage_fraction=len(reduced_obs.index) / len(request.targets),\n",
     "    )"
    ]
   },
@@ -98,7 +167,7 @@
    "source": [
     "# Example\n",
     "\n",
-    "Pulls OMM file from Celestrak, issues propagation request starting Jan 1 2024 for 7 days), and displays results."
+    "Pulls OMM file from Celestrak, issues observation request starting Jan 1 2024 for 7 days), and displays results."
    ]
   },
   {
@@ -326,85 +395,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def coverage_tatc(request: CoverageRequest) -> CoverageResponse:\n",
-    "    aggregated_obs = aggregate_observations(\n",
-    "        gpd.GeoDataFrame(\n",
-    "            [\n",
-    "                {\n",
-    "                    \"point_id\": request.targets.index(target),\n",
-    "                    \"geometry\": target.as_geometry(),\n",
-    "                    \"satellite\": sample.source,\n",
-    "                    \"instrument\": sample.source,\n",
-    "                    \"start\": sample.start,\n",
-    "                    \"end\": sample.start + sample.duration,\n",
-    "                    \"epoch\": sample.start + sample.duration / 2,\n",
-    "                }\n",
-    "                for record in request.target_records\n",
-    "                for target in [t for t in request.targets if t.id == record.target_id]\n",
-    "                for sample in record.samples\n",
-    "            ]\n",
-    "        )\n",
-    "    )\n",
-    "    reduced_obs = reduce_observations(aggregated_obs)\n",
-    "    return CoverageResponse(\n",
-    "        **request.model_dump(\n",
-    "            exclude=[\"target_records\", \"harmonic_mean_revisit\", \"coverage_fraction\"]\n",
-    "        ),\n",
-    "        target_records=list(\n",
-    "            reduced_obs.apply(\n",
-    "                lambda r: CoverageRecord(\n",
-    "                    **next(\n",
-    "                        record\n",
-    "                        for record in request.target_records\n",
-    "                        if request.targets[r[\"point_id\"]].id == record.target_id\n",
-    "                    ).model_dump(exclude=[\"samples\", \"mean_revisit\", \"number_samples\"]),\n",
-    "                    samples=aggregated_obs[\n",
-    "                        aggregated_obs.point_id == r[\"point_id\"]\n",
-    "                    ].apply(\n",
-    "                        lambda s: CoverageSample(\n",
-    "                            start=s.start,\n",
-    "                            duration=s.end - s.start,\n",
-    "                            source=s.satellite,\n",
-    "                            revisit=None if pd.isna(s.revisit) else s.revisit,\n",
-    "                        ),\n",
-    "                        axis=1,\n",
-    "                    ),\n",
-    "                    mean_revisit=(\n",
-    "                        None\n",
-    "                        if pd.isna(r[\"revisit\"])\n",
-    "                        else timedelta(seconds=r[\"revisit\"].total_seconds())\n",
-    "                    ),\n",
-    "                    number_samples=r[\"samples\"],\n",
-    "                ),\n",
-    "                axis=1,\n",
-    "            )\n",
-    "        )\n",
-    "        + [\n",
-    "            ObservationRecord(target_id=target.id)\n",
-    "            for i, target in enumerate(request.targets)\n",
-    "            if not any(reduced_obs[\"point_id\"] == i)\n",
-    "        ],\n",
-    "        harmonic_mean_revisit=(\n",
-    "            None\n",
-    "            if reduced_obs.dropna(subset=\"revisit\").empty\n",
-    "            else timedelta(\n",
-    "                seconds=hmean(\n",
-    "                    reduced_obs.dropna(subset=\"revisit\")[\"revisit\"].dt.total_seconds()\n",
-    "                )\n",
-    "            )\n",
-    "        ),\n",
-    "        coverage_fraction=len(reduced_obs.index) / len(request.targets),\n",
-    "    )"
+    "Append coverage analysis to observation results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
